[project]
name = "1k1"
version = "0.0.1"
authors = [
  { name="mtchdlr", email="datomtchedluri@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
# TODO review later
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"